[package]
name = "start-sshfs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-item = "*"
winreg = "*"
ctrlc = "3.4"
# nanoid = "0.4.0"
md5 = "*"
serde = { version = "*", features = ["derive"] }
# serde_json = "*"
toml = "*"
winrt-notification = "*"
# windows = "*"
sanitize-filename = "*"

[build-dependencies]
windres = "*"
