[package]
name = "start-sshfs"
version = "0.1.1"
edition = "2021"

default-run = "start-sshfs"
# default-run = "try-generatesignal"
# default-run = "try-write"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tray-item = "*"
winreg = "*"
ctrlc = "3.4"
# nanoid = "0.4.0"
md5 = "*"
serde = { version = "*", features = ["derive"] }
# serde_json = "*"
toml = "*"
# libc = "*"
nix = { version = "*", features = ["signal"] }
winrt-notification = "*"
# windows = "*"
winapi = { version = "*", features = [
    "wincon",
    "minwindef",
    "processthreadsapi",
    "winnt",
    "errhandlingapi",
    "tlhelp32",
    "synchapi",
    "winbase",
    "winuser",
] }
sanitize-filename = "*"

[build-dependencies]
windres = "*"


[[bin]]
name = "try-write"
path = "src/try-write.rs"

[[bin]]
name = "try-generatesignal"
path = "src/try-generatesignal.rs"
